--- a/index.html
+++ b/index.html
@@ -23,8 +23,12 @@
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to JuiceUp</h3>
 
 <p>Practical, robust device charging from your bicycle.<br><br><br><br><br>
+  <img src="MainAssemblyRender.bmp">
   <a href="http://paypal.me/AnthonyThomas/20">Pay Here</a>
 </p>
+
+<h3> How Does it Work???? </h3>
+<p> Dynamo power USB charger, fits any standard micro USB fitting, retrofits to almost all cycles</p>
 
 
 <p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
