--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <p>Practical, robust device charging from your bicycle.<br><br><br><br><br>
   <img src="MainAssemblyRender.bmp">
-  <a href="http://paypal.me/AnthonyThomas/20">Pay Here</a>
+  <h1><a href="http://paypal.me/AnthonyThomas/20">Pay Here</a></h1>
 </p>
 
 <h3> How Does it Work???? </h3>
