--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to JuiceUp</h3>
 
-<p>Practical, robust device charging from your bicycle.<br><br><br><br><br>
+<p>Practical, robust device charging from your bicycle.<br><br>
   <img src="MainAssemblyRender.bmp">
   <h1><a href="http://paypal.me/AnthonyThomas/20">Pay Here</a></h1>
 </p>
