--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
 
 <p>Practical, robust device charging from your bicycle.<br><br>
   <img src="MainAssemblyRender.bmp">
-  <h1><a href="http://paypal.me/AnthonyThomas/20">Pay Here</a></h1>
+  <img src="circuitpic.png">
+  <img src="bike1.jpg" height="640">
+  <h1><a href="http://paypal.me/AnthonyThomas/20">Grip assembly £20 </a></h1>
+  <h1><a href="http://paypal.me/AnthonyThomas/40">Grip assembly & Dynamo £40 </a></h1>
+  <h1><a href="http://paypal.me/AnthonyThomas/65">Grip assembly & Deluxe Dynamo £65 </a></h1>
 </p>
 
 <h3> How Does it Work???? </h3>
