--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to JuiceUp</h3>
 
 <p>Practical, robust device charging from your bicycle.<br><br>
+  <img src="FullSizeRender.jpg" width="640">
   <img src="MainAssemblyRender.bmp">
   <img src="circuitpic.png">
   <img src="bike1.jpg" height="640">
